components/common/base/netpol-allow-common-services-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-common-services-ingress
  namespace: cp4i
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector: {}
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ibm-common-services
        - podSelector: {}
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cp4i
